compilable zeppelin 0.6.0 by guoqy